--- a/WolvenKit/Views/Tools/ProjectExplorerView.xaml
+++ b/WolvenKit/Views/Tools/ProjectExplorerView.xaml
@@ -48,7 +48,7 @@
 
         <syncfusion:TabControlExt
             Name="tabControl" Height="25" CloseButtonType="Hide"
-            
+            ShowTabItemContextMenu="False"
             Margin="0,0,0,0"
             BorderThickness="0,0,0,1"
             Style="{StaticResource WolvenKitTabControl}">
